--- a/setup.cfg
+++ b/setup.cfg
@@ -6,8 +6,9 @@ author_email = your-email@example.com
 description = This project provides very easier setup and management for Minecraft server (Bedrock Edition). 
 long_description = file:README.md
 url = https://github.com/ktooi/pymsbre
-license = MIT License
+license_file = LICENSE
 classifier =
+    License :: OSI Approved :: MIT License
     Development Status :: 1 - Planning
     Programming Language :: Python
     Intended Audience :: Developers
@@ -18,7 +19,7 @@ classifier =
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
-    
+
 [options]
 zip_safe = False
 packages = find:
