--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ author_email = your-email@example.com
 description = This project provides very easier setup and management for Minecraft server (Bedrock Edition). 
 long_description = file:README.md
 url = https://github.com/ktooi/pymsbre
-license_file = LICENSE
+license_files = LICENSE
 classifier =
     License :: OSI Approved :: MIT License
     Development Status :: 1 - Planning
@@ -19,6 +19,7 @@ classifier =
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3 :: Only
 
 [options]
 zip_safe = False
