Added the "__main__.py"
so as to can run with command.

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,7 @@ zip_safe = False
 packages = find:
 install_requires =
   docker >= 4.4.0
+entry_points = file: entry_points.cfg
 
 [wheel]
 universal = 1
