--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
-name = pymcdbsc
-version = attr:pymcdbsc.__version__
+name = pymcbdsc
+version = attr:pymcbdsc.__version__
 author = Kodai Tooi
 author_email = your-email@example.com
 description = This project provides very easier setup and management for Minecraft server (Bedrock Edition). 
 long_description = file:README.md
-url = https://github.com/ktooi/pymcdbsc
+url = https://github.com/ktooi/pymcbdsc
 license_files = LICENSE
 classifier =
     License :: OSI Approved :: MIT License
