--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = pymcbdsc
 version = attr:pymcbdsc.__version__
 author = Kodai Tooi
 author_email = your-email@example.com
-description = This project provides very easier setup and management for Minecraft server (Bedrock Edition). 
+description = This project provides very easier setup and management for Minecraft Bedrock Dedicated Server. 
 long_description = file:README.md
 url = https://github.com/ktooi/pymcbdsc
 license_files = LICENSE
