--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,25 +1,28 @@
 version: 2.1
 
 orbs:
-  python: circleci/python@0.2.1
+  python: circleci/python@1.3.2
 
 jobs:
   build-and-test:
     executor: python/default
     steps:
       - checkout
-      - python/load-cache
-      - python/install-deps
-      - python/save-cache
-      - run:
-          command: ./setup.py bdist_wheel
-          name: Build
+      - python/dist
+      - python/install-packages:
+          pkg-manager: pip
+          pip-dependency-file: pymcbdsc.egg-info/requires.txt
       - run:
           command: ./manage.py test
           name: Test
       - store_artifacts:
           path: dist
           destination: package
+#  test-py35:
+#    docker:
+#      - image: circleci/python:3.5
+#    steps:
+
 
 workflows:
   main:
