--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
           command: ./manage.py test
           name: Test
       - save_cache:
-          key: v1-{{ .Branch }}-{{ .BuildNum }}
+          key: v1-{{ .Branch }}-{{ .Revision }}
           paths:
             - ~/pymcbdsc.egg-info/
             - ~/dist/
@@ -42,7 +42,7 @@ workflows:
           pip-dependency-file: pymcbdsc.egg-info/requires.txt
           setup:
             - restore_cache:
-                key: v1-{{ .Branch }}-{{ .BuildNum }}
+                key: v1-{{ .Branch }}-{{ .Revision }}
       - python/test:
           name: test-py3.6
           version: "3.6"
@@ -50,7 +50,7 @@ workflows:
           pip-dependency-file: pymcbdsc.egg-info/requires.txt
           setup:
             - restore_cache:
-                key: v1-{{ .Branch }}-{{ .BuildNum }}
+                key: v1-{{ .Branch }}-{{ .Revision }}
       - python/test:
           name: test-py3.7
           version: "3.7"
@@ -58,7 +58,7 @@ workflows:
           pip-dependency-file: pymcbdsc.egg-info/requires.txt
           setup:
             - restore_cache:
-                key: v1-{{ .Branch }}-{{ .BuildNum }}
+                key: v1-{{ .Branch }}-{{ .Revision }}
       - python/test:
           name: test-py3.8
           version: "3.8"
@@ -66,7 +66,7 @@ workflows:
           pip-dependency-file: pymcbdsc.egg-info/requires.txt
           setup:
             - restore_cache:
-                key: v1-{{ .Branch }}-{{ .BuildNum }}
+                key: v1-{{ .Branch }}-{{ .Revision }}
       - python/test:
           name: test-py3.9
           version: "3.9"
@@ -74,4 +74,4 @@ workflows:
           pip-dependency-file: pymcbdsc.egg-info/requires.txt
           setup:
             - restore_cache:
-                key: v1-{{ .Branch }}-{{ .BuildNum }}
+                key: v1-{{ .Branch }}-{{ .Revision }}
