Added the data_files section
so as to include the docker-related files in the package.

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,5 +28,12 @@ install_requires =
   docker >= 4.4.0
 entry_points = file: entry_points.cfg
 
+[options.data_files]
+docker =
+    docker/Dockerfile
+    docker/entrypoint.sh
+docker/env-files =
+    docker/env-files/example.env
+
 [wheel]
 universal = 0
