--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,21 @@ jobs:
       - run:
           command: ./manage.py test
           name: Test
+  register:
+    executor: python/default
+    steps:
+      - checkout
+      - restore_cache:
+          key: v1-{{ .Branch }}-{{ .Revision }}
+      - run:
+          command: |
+            echo -e "[pypi]" > ~/.pypirc
+            echo -e "username = __token__" >> ~/.pypirc
+            echo -e "password = $PYPI_TOKEN" >> ~/.pypirc
+          name: Create .pypirc
+      - run:
+          command: ./setup.py bdist_wheel upload
+          name: Upload
 
 
 workflows:
@@ -97,3 +112,16 @@ workflows:
           setup:
             - restore_cache:
                 key: v1-{{ .Branch }}-{{ .Revision }}
+      - register:
+          name: register
+          requires:
+            - test-py3.5
+            - test-py3.6
+            - test-py3.7
+            - test-py3.8
+            - test-py3.9
+          filters:
+            tags:
+              only: /[0-9]+(\.[0-9]+)*/
+            branches:
+              ignore: /.*/
