--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -140,6 +140,6 @@ workflows:
             - test-py3.9
           filters:
             tags:
-              only: /[0-9]+(\.[0-9]+)*/
+              only: /v[0-9]+(\.[0-9]+)*/
             branches:
               ignore: /.*/
