--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,7 @@ author = Kodai Tooi
 author_email = your-email@example.com
 description = This project provides very easier setup and management for Minecraft Bedrock Dedicated Server. 
 long_description = file:README.md
+long_description_content_type = text/markdown
 url = https://github.com/ktooi/pymcbdsc
 license_files = LICENSE
 classifier =
@@ -29,10 +30,10 @@ install_requires =
 entry_points = file: entry_points.cfg
 
 [options.data_files]
-docker =
+share/mcbdsc/docker =
     docker/Dockerfile
     docker/entrypoint.sh
-docker/env-files =
+share/mcbdsc/docker/env-files =
     docker/env-files/example.env
 
 [bdist_wheel]
