Updated package metadata.

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,9 +10,11 @@ url = https://github.com/ktooi/pymcbdsc
 license_files = LICENSE
 classifier =
     License :: OSI Approved :: MIT License
-    Development Status :: 1 - Planning
+    Development Status :: 3 - Alpha
     Programming Language :: Python
     Intended Audience :: Developers
+    Intended Audience :: System Administrators
+    Operating System :: Microsoft :: Windows
     Operating System :: POSIX
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.5
@@ -25,6 +27,7 @@ classifier =
 [options]
 zip_safe = False
 packages = find:
+python_requires = >= 3.5
 install_requires =
   docker >= 4.4.0
 entry_points = file: entry_points.cfg
