Changed unittest script
from manage.py to setup.py
so as to compliant with de-fact standard.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "Python: unittest",
             "type": "python",
             "request": "launch",
-            "program": "${workspaceFolder}/manage.py",
+            "program": "${workspaceFolder}/setup.py",
             "args": [
                 "test"
             ],
