--- a/.github/workflows/test_python_package.yml
+++ b/.github/workflows/test_python_package.yml
@@ -21,7 +21,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pytest
-          pip install $(python manage.py requires)
+          python manage.py requires -o requirements.txt
+          pip install -r requirements.txt
       - name: Test with pytest
         run: pytest --doctest-modules --junitxml=junit/test-results-${{ matrix.python-version }}.xml
       - name: Upload pytest test results
