--- a/.github/workflows/test_python_package.yml
+++ b/.github/workflows/test_python_package.yml
@@ -31,15 +31,22 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest
+          pip install pytest pytest-cov
           python manage.py requires -o requirements.txt
           pip install -r requirements.txt
       - name: Test with pytest
-        run: pytest --doctest-modules --junitxml=junit/test-results-${{ matrix.python-version }}.xml
+        run: pytest --doctest-modules --junitxml=junit/test-results-${{ matrix.python-version }}.xml --cov=pymbdsc --cov-report=xml --cov-report=html
       - name: Upload pytest test results
         uses: actions/upload-artifact@v2
         with:
           name: pytest-results-${{ matrix.python-version }}
           path: junit/test-results-${{ matrix.python-version }}.xml
+        # テスト失敗時にテスト結果を公開するには、always() を使用して常にこのステップを実行する
+        if: ${{ always() }}
+      - name: Upload pytest coverage results
+        uses: actions/upload-artifact@v2
+        with:
+          name: pytest-cov-results-${{ matrix.python-version }}
+          path: htmlcov/
         # テスト失敗時にテスト結果を公開するには、always() を使用して常にこのステップを実行する
         if: ${{ always() }}
