--- a/.github/workflows/test_python_package.yml
+++ b/.github/workflows/test_python_package.yml
@@ -35,7 +35,7 @@ jobs:
           python manage.py requires -o requirements.txt
           pip install -r requirements.txt
       - name: Test with pytest
-        run: pytest --doctest-modules --junitxml=junit/test-results-${{ matrix.python-version }}.xml --cov=pymbdsc --cov-report=xml --cov-report=html
+        run: pytest --doctest-modules --junitxml=junit/test-results-${{ matrix.python-version }}.xml --cov=pymcbdsc --cov-report=xml --cov-report=html
       - name: Upload pytest test results
         uses: actions/upload-artifact@v2
         with:
