--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,10 +8,12 @@ jobs:
     executor: python/default
     steps:
       - checkout
-      - python/dist
+      - run:
+          name: Generate requirements.txt
+          command: python manage.py requires -o requirements.txt
       - python/install-packages:
           pkg-manager: pip
-          pip-dependency-file: pymcbdsc.egg-info/requires.txt
+      - python/dist
       - run:
           command: ./setup.py test
           name: Test
