Fixed a problem that caused publish to fail.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,8 +35,13 @@ jobs:
     executor: python/default
     steps:
       - checkout
+      - run:
+          name: Generate requirements.txt
+          command: python manage.py requires -o requirements.txt
       - restore_cache:
           key: v1-{{ .Branch }}-{{ .Revision }}
+      - python/install-packages:
+          pkg-manager: pip
       - run:
           command: ./manage.py vercheck -e CIRCLE_TAG
           name: check version and tag
