Added the extras_require.

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,15 @@ install_requires =
   docker >= 4.4.0
 entry_points = file: entry_points.cfg
 
+[options.extras_require]
+test =
+  pytest
+  pytest-cov
+  pytest-pep8
+doc =
+  sphinx
+  sphinx-rtd-theme
+
 [options.data_files]
 share/mcbdsc/docker =
     docker/Dockerfile
