--- a/setup.cfg
+++ b/setup.cfg
@@ -29,7 +29,8 @@ zip_safe = False
 packages = find:
 python_requires = >= 3.5
 install_requires =
-  docker >= 4.4.0
+  docker >= 3.0.0
+  PyYAML >= 5.1
 entry_points = file: entry_points.cfg
 
 [options.extras_require]
