Added skip_dirty_check param.

--- a/.github/workflows/python-gen-requirements.yml
+++ b/.github/workflows/python-gen-requirements.yml
@@ -24,3 +24,4 @@ jobs:
           commit_message: Automatically update requirements.txt.
           # git add --force requirements.txt
           file_pattern: '--force requirements.txt'
+          skip_dirty_check: true
